fix overflow page

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,7 @@
     min-width: 320px;
     margin: 0 auto;
     font-family: "Open Sans", "Arial", sans-serif;
-    overflow: hidden;
+    /* overflow: hidden; */
 
     background-color: #001337;
     color:#fff;
